maze.pledge.PledgeMaze.scala.error
Compilation error:
PledgeMaze:38: error: not found: value dirpref
  dirpref=Direction.NORTH
  ^PledgeMaze:41: error: not found: value dirpref
      if (isDirectionFree(dirpref) and dirpref==Direction.EAST) {dirpref=Direction.SOUTH;setDirection(Direction.SOUTH)}
                          ^PledgeMaze:41: error: value and is not a member of Boolean
      if (isDirectionFree(dirpref) and dirpref==Direction.EAST) {dirpref=Direction.SOUTH;setDirection(Direction.SOUTH)}
                                   ^PledgeMaze:41: error: not found: value dirpref
      if (isDirectionFree(dirpref) and dirpref==Direction.EAST) {dirpref=Direction.SOUTH;setDirection(Direction.SOUTH)}
                                       ^PledgeMaze:41: error: not found: value dirpref
      if (isDirectionFree(dirpref) and dirpref==Direction.EAST) {dirpref=Direction.SOUTH;setDirection(Direction.SOUTH)}
                                                                 ^PledgeMaze:42: error: not found: value dirpref
      if (isDirectionFree(dirpref) and dirpref==Direction.WEST) {dirpref=Direction.NORTH;setDirection(Direction.NORTH)}
                          ^PledgeMaze:42: error: value and is not a member of Boolean
      if (isDirectionFree(dirpref) and dirpref==Direction.WEST) {dirpref=Direction.NORTH;setDirection(Direction.NORTH)}
                                   ^PledgeMaze:42: error: not found: value dirpref
      if (isDirectionFree(dirpref) and dirpref==Direction.WEST) {dirpref=Direction.NORTH;setDirection(Direction.NORTH)}
                                       ^PledgeMaze:42: error: not found: value dirpref
      if (isDirectionFree(dirpref) and dirpref==Direction.WEST) {dirpref=Direction.NORTH;setDirection(Direction.NORTH)}
                                                                 ^PledgeMaze:43: error: not found: value dirpref
      if (isDirectionFree(dirpref) and dirpref==Direction.NORTH) {dirpref=Direction.EAST;setDirection(Direction.EAST)}
                          ^PledgeMaze:43: error: value and is not a member of Boolean
      if (isDirectionFree(dirpref) and dirpref==Direction.NORTH) {dirpref=Direction.EAST;setDirection(Direction.EAST)}
                                   ^PledgeMaze:43: error: not found: value dirpref
      if (isDirectionFree(dirpref) and dirpref==Direction.NORTH) {dirpref=Direction.EAST;setDirection(Direction.EAST)}
                                       ^PledgeMaze:43: error: not found: value dirpref
      if (isDirectionFree(dirpref) and dirpref==Direction.NORTH) {dirpref=Direction.EAST;setDirection(Direction.EAST)}
                                                                  ^PledgeMaze:44: error: not found: value dirpref
      if (isDirectionFree(dirpref) and dirpref==Direction.SOUTH) {dirpref=Direction.WEST;setDirection(Direction.WEST)}
                          ^PledgeMaze:44: error: value and is not a member of Boolean
      if (isDirectionFree(dirpref) and dirpref==Direction.SOUTH) {dirpref=Direction.WEST;setDirection(Direction.WEST)}
                                   ^PledgeMaze:44: error: not found: value dirpref
      if (isDirectionFree(dirpref) and dirpref==Direction.SOUTH) {dirpref=Direction.WEST;setDirection(Direction.WEST)}
                                       ^PledgeMaze:44: error: not found: value dirpref
      if (isDirectionFree(dirpref) and dirpref==Direction.SOUTH) {dirpref=Direction.WEST;setDirection(Direction.WEST)}
                                                                  ^PledgeMaze:47: error: not found: value dirpref
    if (getDirection==dirpref && !estFaceMur()) {
                      ^