maze.pledge.PledgeMaze.scala.code
override def run() {
  var sA=0
  def testgauche():Boolean = {
    gauche()
    if (estFaceMur()) {droite();return true}
    droite()
    return false
  }
  
  def isDirectionFree(dir:Direction):Boolean = {
    var d=getDirection()
    setDirection(dir)
    if (estFaceMur) {setDirection(d); return false}
    setDirection(d);
    return true
  }
  
  def keepHandOnSideWall():Boolean = {
    var t=false

    if (!estFaceMur && testgauche) {
      avance()
      t=true
      if (!testgauche()) {
        gauche();
        avance();
        if (!testgauche()) {
          gauche();
          avance();
          
        }}}
    return t
                           
  }
  
  droite()
  dirpref=Direction.NORTH
  while (!estSurBiscuit) {
    if (sA==3) {
      if (isDirectionFree(dirpref) and dirpref==Direction.EAST) {dirpref=Direction.SOUTH;setDirection(Direction.SOUTH)}
      if (isDirectionFree(dirpref) and dirpref==Direction.WEST) {dirpref=Direction.NORTH;setDirection(Direction.NORTH)}
      if (isDirectionFree(dirpref) and dirpref==Direction.NORTH) {dirpref=Direction.EAST;setDirection(Direction.EAST)}
      if (isDirectionFree(dirpref) and dirpref==Direction.SOUTH) {dirpref=Direction.WEST;setDirection(Direction.WEST)}
      sA=0
    }
    if (getDirection==dirpref && !estFaceMur()) {
      avance()
    } else {
    	if (!keepHandOnSideWall()) {droite; sA+=1}
    }
  }
  prendBiscuit()
  
  
  
}